fix firefox clippath with zoom

--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,26 @@ legend {
     }
 }
 
+.mask {
+    position: absolute; 
+    width: 0;  
+    height: 0
+}
+
+@-moz-document url-prefix() {
+    .mask clipPath {
+        transform: scale(1.25);
+    }
+}
+
+@media (max-width: 1200px) {
+    @-moz-document url-prefix() {
+        .mask clipPath {
+            transform: none;
+        }
+    }
+}
+
 
 .wrapperPadding {
     padding: var(--xl-padding-h) 0;
